--- a/package.json
+++ b/package.json
@@ -18,8 +18,18 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "buffer": "^6.0.3",
+    "concat-stream": "^2.0.0",
+    "core-js": "^3.15.2",
+    "crypto-js": "^4.0.0",
+    "events": "^3.3.0",
+    "lodash": "^4.17.21",
     "rxjs": "~6.6.0",
+    "sax": "^1.2.4",
+    "stream": "0.0.2",
+    "sweetalert2": "^11.0.18",
     "tslib": "^2.2.0",
+    "uuid": "^3.4.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
