--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "crypto-js": "^4.0.0",
     "events": "^3.3.0",
     "lodash": "^4.17.21",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
     "sax": "^1.2.4",
     "stream": "0.0.2",
